# unlimitedocr.c

./: .gitignore  CMakeLists.txt  Makefile  README.md  README_DESIGN.md  pyproject.toml
.pi/extensions/: implementation-loop.ts
configs/: quant-cfg.yaml
data.tmp/probes/: qa_last5_runtime_stress.py  qa_last5_static_contracts.py  triage_base_then_gundam.py  triage_gundam_repeat.py
docs/: architecture.md  foundations.md  howto_quant.md  implementation_plan.md  perf.md  plan_q2.md  plan_q4.md  plan_q8.md  plan_q8_vision.md  plan_threadsafe.md  ref.md
docs/baseline_profiles/: docs-test-metal-profile.json
include/: unlimitedocr.h
notebooks/: demo.ipynb
probes/: e2e_generation_probe.py  read_msl_spec.py  tmp_e2e_probe.py
src/backend/cpu_ref/: uocr_cpu_ref.c  uocr_cpu_ref.h
src/backend/metal/: uocr_metal.h  uocr_metal.m
src/backend/metal/kernels/: attention.metal  attention_decode.metal  attention_prefill.metal  attention_q8.metal  clip.metal  clip_q8.metal  clip_sam.metal  common.metal  decode_gemv_q4.metal  decode_gemv_q8.metal  dense.metal  dense_q8.metal  embedding.metal  embedding_q4.metal  embedding_q8.metal  gemm_q4.metal  gemm_q8.metal  kv_cache.metal  layout.metal  lm_head_q4.metal  lm_head_q8.metal  moe.metal  moe_q8.metal  mpp_prototypes.metal  norm.metal  projector_q8.metal  prompt_assembly.metal  rope.metal  sam.metal  sam_attention.metal  sam_conv.metal  sam_position.metal  sam_q8.metal  sam_window.metal  sampling.metal  smoke.metal  uocr_smoke.metal  vision_gemm_q8.metal
src/core/: uocr_alloc.c  uocr_alloc.h  uocr_api.c  uocr_result.c  uocr_result.h
src/frontend_native/: README.md
src/model/: uocr_constants.h  uocr_format.h  uocr_model_file.c  uocr_model_file.h  uocr_tensor_registry.h
src/quant/: README.md  uocr_quant.c  uocr_quant.h
src/runtime/: uocr_logits_processor.c  uocr_logits_processor.h  uocr_memory.c  uocr_memory.h  uocr_profile.c  uocr_profile.h  uocr_request_validation.c  uocr_request_validation.h  uocr_sequence.c  uocr_sequence.h  uocr_vision.c  uocr_vision.h
src/unlimitedocr_c/: __init__.py  api.py  calibrate.py  convert.py  drift.py  ffi.py  frontend.py  golden.py  ocr.py  parity.py  parity_thresholds.py  perf.py  profile_baseline.py  q4_sim.py  quant_cfg.py  tensor_registry.py
tests/: test_alloc.c  test_api.c  test_calibrate.py  test_constants.c  test_convert.py  test_cpu_ref.c  test_drift.py  test_ffi.py  test_frontend.py  test_frontend_boundary.py  test_frontend_parity.py  test_generation_cache_facts.py  test_golden.py  test_logits_processor.c  test_memory.c  test_metal.c  test_ocr.py  test_opt_in_policy.py  test_parity.py  test_parity_thresholds.py  test_perf.py  test_public_image_parity.py  test_quant.c  test_request_validation.c  test_result.c  test_sequence.c  test_unlimitedocr_api.py  test_uocr_dump.c  test_uocr_model_file.c  test_vision.c  uocr_test_model_file.h
tests/fixtures/: cpu_ref_tiny_golden.h
tools/: build.sh  gen_metal.py  publish.sh  uocr-calibrate  uocr-convert  uocr-drift  uocr-dump-cpu-ref-tiny  uocr-profile-baseline  uocr-ref-dump  uocr_dump.c
