[project]
name = "unlimitedocr-c"
version = "0.2.1"
description = "Python frontend and native C/Metal inference engine for baidu/Unlimited-OCR"
readme = "README.md"
authors = [
    { name = "Mauro Sciancalepore", email = "maurosciancalepore98@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "huggingface-hub>=0.23",
    "numpy>=2",
    "pillow>=10",
    "safetensors>=0.4",
    "tokenizers>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
